[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.2"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["derive"] }
nom = "7"
atoi = "2"
itertools = "0.10.5"
